--- a/index.html
+++ b/index.html
@@ -72,14 +72,20 @@
 
 
                 <div class="Design">
-                    <img src="assets/img/Setting.png">
+                    <img src="assets/img/pen.png">
                     <h2 class="name">DESIGN</h2>
                     <p class="parg">Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
                 </div>
 
                 <div class="DEVELOPMENT">
-                    <img src="assets/img/Flag.png">
+                    <img src="assets/img/Setting.png">
                     <h2 class="name">DEVELOPMENT</h2>
+                    <p class="parg">Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
+                </div>
+                
+                  <div class="DEVELOPMENT">
+                    <img src="assets/img/plane.png">
+                    <h2 class="name">ROCKET SCIENCE</h2>
                     <p class="parg">Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
                 </div>
  
