--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                 </div>
                 
                   <div class="DEVELOPMENT">
-                    <img src="assets/img/plane.png">
+                    <img src="assets/img/plane.png" >
                     <h2 class="name">ROCKET SCIENCE</h2>
                     <p class="parg">Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
                 </div>
@@ -206,7 +206,7 @@
                 <div>
                     <img src="assets/img/3.png">
                     <lable>
-                        Viro Media Players UI
+                          Media Players UI
                     </lable>
                 </div>
                 <div>
